namespace factory.src.Interfaces;

public interface IShape
{
    void Draw();
}
